--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <h2 id="subtitle">Find your favorite movies! </h2>
         <form action="" id="search">
             <input type="text" id="search-input" placeholder="Enter movie name...">
-            <button type="submit" id="search-btn">Search</button>
+            <button type="submit" id="search-btn">Search 🍿</button>
             
         </form>
     </div>
